--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 include_guard(GLOBAL)
 cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
+include(FetchContent)
 project("thezhe/content_lock")
 # Fetch content using `content.lock`
 #[[
@@ -10,7 +11,6 @@ project("thezhe/content_lock")
     <git-url-N>@<hash-N>
 ]]
 function(thezhe_content_lock)
-    include(FetchContent)
     set(filename "content.lock")
     # Reconfigure on change
     configure_file("${filename}" "_${filename}" COPYONLY)
@@ -18,12 +18,12 @@ function(thezhe_content_lock)
     foreach(entry IN LISTS entries)
         string(REGEX REPLACE "@" ";" entry_tokens "${entry}")
         list(GET entry_tokens 0 entry_url)
-        list(GET entry_tokens 1 entry_ref)
+        list(GET entry_tokens 1 entry_hash)
         cmake_path(GET entry_url STEM LAST_ONLY entry_repo_name)
         FetchContent_Declare(
             "${entry_repo_name}"
             GIT_REPOSITORY "${entry_url}"
-            GIT_TAG "${entry_ref}"
+            GIT_TAG "${entry_hash}"
             GIT_SHALLOW TRUE)
         FetchContent_MakeAvailable("${entry_repo_name}")
     endforeach()
@@ -33,3 +33,4 @@ if(NOT PROJECT_IS_TOP_LEVEL)
     return()
 endif()
 thezhe_content_lock()
+thezhe_templatelists()
